--- a/src/index.css
+++ b/src/index.css
@@ -118,11 +118,16 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
+section{
+  max-height: 100vh;
+  height: 100vh;
+}
 
 main{
-  min-height: 100vh;
+  height: 100%;
 }
