Adiciona novo componente Dialog e atualiza dependências. Melhora estilo do componente Hero e ajusta variantes de botão.

--- a/src/index.css
+++ b/src/index.css
@@ -144,3 +144,7 @@ main{
 h1,h2,h3,h4,h5,h6{
   @apply bg-gradient-to-t from-zinc-500 via-zinc-200 to-white text-transparent bg-clip-text;
 }
+
+.red-shadow{
+  @apply drop-shadow-[0px_0_10px_var(--color-red-500)];
+}
