--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+html{
+  scroll-behavior: smooth;
+}
+
 section{
   max-height: 100vh;
   height: 100vh;
